--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "mongoose": "^6.13.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "
+    nodemon": "^2.0.16"
   }
+  "scripts": {
+  "start": "node index.js"
+}
+
 }
